# youtube-downloader-rust

./: Cargo.toml  README.md
src/: logic.rs  main.rs  style.rs  tools.rs  types.rs
