[package]
name = "yt-dlp-gui"
version = "0.4.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug", "advanced"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.14"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
zip = "0.6"
bytes = "1.4"
anyhow = "1.0"
regex = "1.10"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"